# rollercoaster

./: .gitignore  CMakeLists.txt  rollercoaster.sln
rollercoaster/: Camera.cpp  Camera.h  Common.h  FreeTypeFont.cpp  FreeTypeFont.h  Game.cpp  Game.h  GameWindow.cpp  HighResolutionTimer.cpp  Main.cpp  MatrixStack.cpp  MatrixStack.h  ObjModel.cpp  ObjModel.h  OpenGLTemplate.vcxproj  OpenGLTemplate.vcxproj.filters  Plane.cpp  Plane.h  Shaders.cpp  Shaders.h  Skybox.cpp  Skybox.h  Sphere.cpp  Sphere.h  TODO.txt  Texture.cpp  Texture.h  builder.cpp  builder.h  camera.cpp  camera.h  cart.cpp  cart.h  catmullrom.cpp  catmullrom.h  common.h  facevertexmesh.cpp  facevertexmesh.h  frame.h  freetypefont.cpp  (+46 more)
rollercoaster/resources/data/: track.h  trees.h
rollercoaster/resources/models/: aloe1.mtl  carriage.mtl  lamp.mtl  obj__plamt2.mtl  palm3.mtl  palm3.tga  palm4.mtl  palm4.tga  palm5.mtl  palm5.tga  palmt2.tga  shrub1.mtl  shrub1.tga  shrub2.mtl  shrub2.tga  shrub3.mtl  shrub3.tga  shrub4.mtl  shrub4.tga  shrub5.mtl  shrub5.tga
rollercoaster/resources/models/Barrel/: barrel02.mtl
rollercoaster/resources/models/Horse/: horse2.mtl
rollercoaster/resources/shaders/: font.frag  font2D.frag  fonts.frag  fonts.vert  hud.vert  main.frag  main.vert  ortho2D.vert  perVertexLighting.frag  perVertexLighting.vert  terrain.frag  terrain.vert  trees.frag  trees.vert
